--- a/src/capa_presentacion/CrearCuenta.form
+++ b/src/capa_presentacion/CrearCuenta.form
@@ -71,7 +71,7 @@
                           <Component id="labelPassword" min="-2" max="-2" attributes="0"/>
                           <Component id="SignIn" min="-2" pref="92" max="-2" attributes="0"/>
                           <Component id="labelUsername" min="-2" max="-2" attributes="0"/>
-                          <Component id="Username" alignment="0" min="-2" pref="330" max="-2" attributes="0"/>
+                          <Component id="username" alignment="0" min="-2" pref="330" max="-2" attributes="0"/>
                           <Component id="password" min="-2" pref="330" max="-2" attributes="0"/>
                           <Component id="jSeparator1" min="-2" pref="260" max="-2" attributes="0"/>
                       </Group>
@@ -87,7 +87,7 @@
                       <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                       <Component id="labelUsername1" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="Username" min="-2" pref="35" max="-2" attributes="0"/>
+                      <Component id="username" min="-2" pref="35" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jSeparator2" min="-2" pref="10" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="14" max="-2" attributes="0"/>
@@ -126,7 +126,7 @@
                 <Property name="horizontalTextPosition" type="int" value="0"/>
               </Properties>
             </Component>
-            <Component class="javax.swing.JTextField" name="Username">
+            <Component class="javax.swing.JTextField" name="username">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="db" green="c2" red="96" type="rgb"/>
@@ -148,7 +148,7 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="UsernameMousePressed"/>
+                <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="usernameMousePressed"/>
               </Events>
             </Component>
             <Component class="javax.swing.JPasswordField" name="password">
@@ -173,6 +173,9 @@
                   <Color blue="0" green="0" red="0" type="rgb"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="passwordMousePressed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="labelUsername">
               <Properties>
@@ -236,6 +239,9 @@
                   <Border info="null"/>
                 </Property>
               </Properties>
+              <Events>
+                <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="emailMousePressed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
