--- a/src/capa_presentacion/CrearCuenta.form
+++ b/src/capa_presentacion/CrearCuenta.form
@@ -61,19 +61,28 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="Login" alignment="1" max="32767" attributes="0"/>
-                  <Group type="102" alignment="0" attributes="0">
-                      <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="labelUsername1" min="-2" max="-2" attributes="0"/>
-                          <Component id="email" min="-2" pref="330" max="-2" attributes="0"/>
-                          <Component id="jSeparator2" min="-2" pref="260" max="-2" attributes="0"/>
-                          <Component id="jSeparator3" min="-2" pref="260" max="-2" attributes="0"/>
-                          <Component id="labelPassword" min="-2" max="-2" attributes="0"/>
-                          <Component id="SignIn" min="-2" pref="92" max="-2" attributes="0"/>
-                          <Component id="labelUsername" min="-2" max="-2" attributes="0"/>
-                          <Component id="username" alignment="0" min="-2" pref="330" max="-2" attributes="0"/>
-                          <Component id="password" min="-2" pref="330" max="-2" attributes="0"/>
-                          <Component id="jSeparator1" min="-2" pref="260" max="-2" attributes="0"/>
+                          <Group type="102" attributes="0">
+                              <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
+                              <Group type="103" groupAlignment="0" attributes="0">
+                                  <Component id="labelUsername1" min="-2" max="-2" attributes="0"/>
+                                  <Component id="email" min="-2" pref="330" max="-2" attributes="0"/>
+                                  <Component id="jSeparator2" min="-2" pref="260" max="-2" attributes="0"/>
+                                  <Component id="jSeparator3" min="-2" pref="260" max="-2" attributes="0"/>
+                                  <Component id="labelPassword" min="-2" max="-2" attributes="0"/>
+                                  <Component id="labelUsername" min="-2" max="-2" attributes="0"/>
+                                  <Component id="username" alignment="0" min="-2" pref="330" max="-2" attributes="0"/>
+                                  <Component id="password" min="-2" pref="330" max="-2" attributes="0"/>
+                                  <Component id="jSeparator1" min="-2" pref="260" max="-2" attributes="0"/>
+                              </Group>
+                          </Group>
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="-2" pref="57" max="-2" attributes="0"/>
+                              <Component id="Back" min="-2" pref="92" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="77" max="-2" attributes="0"/>
+                              <Component id="SignIn" min="-2" pref="92" max="-2" attributes="0"/>
+                          </Group>
                       </Group>
                       <EmptySpace pref="50" max="32767" attributes="0"/>
                   </Group>
@@ -96,15 +105,18 @@
                       <Component id="email" min="-2" pref="35" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jSeparator3" min="-2" pref="10" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="45" max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="labelPassword" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace max="-2" attributes="0"/>
+                      <EmptySpace type="separate" max="-2" attributes="0"/>
                       <Component id="password" min="-2" pref="35" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                      <Component id="SignIn" min="-2" pref="46" max="-2" attributes="0"/>
-                      <EmptySpace pref="92" max="32767" attributes="0"/>
+                      <EmptySpace min="-2" pref="52" max="-2" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
+                          <Component id="Back" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
+                          <Component id="SignIn" alignment="3" min="-2" pref="46" max="-2" attributes="0"/>
+                      </Group>
+                      <EmptySpace pref="81" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -197,10 +209,10 @@
             </Component>
             <Component class="javax.swing.JSeparator" name="jSeparator2">
             </Component>
-            <Component class="javax.swing.JButton" name="SignIn">
+            <Component class="javax.swing.JButton" name="Back">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-                  <Color blue="d7" green="b9" red="84" type="rgb"/>
+                  <Color blue="7e" green="6d" red="5d" type="rgb"/>
                 </Property>
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Roboto" size="12" style="0"/>
@@ -208,13 +220,16 @@
                 <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="33" green="33" red="33" type="rgb"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="Sign In"/>
+                <Property name="text" type="java.lang.String" value="Back"/>
                 <Property name="borderPainted" type="boolean" value="false"/>
                 <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
                   <Color id="Hand Cursor"/>
                 </Property>
                 <Property name="debugGraphicsOptions" type="int" value="-1"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BackActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JLabel" name="labelUsername1">
               <Properties>
@@ -242,6 +257,25 @@
               <Events>
                 <EventHandler event="mousePressed" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="emailMousePressed"/>
               </Events>
+            </Component>
+            <Component class="javax.swing.JButton" name="SignIn">
+              <Properties>
+                <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="d7" green="b9" red="84" type="rgb"/>
+                </Property>
+                <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                  <Font name="Roboto" size="12" style="0"/>
+                </Property>
+                <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+                  <Color blue="33" green="33" red="33" type="rgb"/>
+                </Property>
+                <Property name="text" type="java.lang.String" value="Sign In"/>
+                <Property name="borderPainted" type="boolean" value="false"/>
+                <Property name="cursor" type="java.awt.Cursor" editor="org.netbeans.modules.form.editors2.CursorEditor">
+                  <Color id="Hand Cursor"/>
+                </Property>
+                <Property name="debugGraphicsOptions" type="int" value="-1"/>
+              </Properties>
             </Component>
           </SubComponents>
         </Container>
